fix: for missing packages and packages vulnerabilities

--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
+    "downshift": "^6.1.7",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-utils": "^0.10.2",
@@ -110,15 +111,15 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-a11y": "^6.4.4",
-    "@storybook/addon-actions": "^6.4.4",
-    "@storybook/addon-essentials": "^6.4.19",
-    "@storybook/addon-links": "^6.4.4",
+    "@storybook/addon-a11y": "^6.5.8",
+    "@storybook/addon-actions": "^6.5.8",
+    "@storybook/addon-essentials": "^6.5.8",
+    "@storybook/addon-links": "^6.5.8",
     "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.4.4",
-    "@storybook/react": "^6.4.19",
-    "@storybook/storybook-deployer": "^2.8.10",
-    "@storybook/theming": "^6.4.4",
+    "@storybook/addons": "^6.5.8",
+    "@storybook/react": "^6.5.8",
+    "@storybook/storybook-deployer": "^2.8.11",
+    "@storybook/theming": "^6.5.8",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -136,7 +137,7 @@
     "prettier": "^2.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "storybook": "^6.4.4",
+    "storybook": "^6.5.8",
     "storybook-addon-jsx": "^7.3.14",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
